package com.tcgpocket.state;

/** What an {@link ActiveModifier} does while it lasts. */
public enum ModifierKind {

    /** Adds to damage this Pokemon deals. */
    INCREASE_DAMAGE_DEALT,

    /** Subtracts from damage this Pokemon deals. */
    REDUCE_DAMAGE_DEALT,

    /** Subtracts from damage this Pokemon takes. */
    REDUCE_DAMAGE_TAKEN,

    /** Zeroes damage this Pokemon takes, whatever the arithmetic said. */
    PREVENT_DAMAGE,

    /**
     * Forbids this Pokemon declaring an attack. Read by {@code Action.isLegal},
     * not by the damage pipeline — retreating, attaching, playing Trainers and
     * using abilities all stay legal.
     */
    CANNOT_ATTACK,

    /**
     * Forbids this Pokemon retreating. Read by {@code RetreatAction.isLegal};
     * attacking and everything else stay legal.
     */
    CANNOT_RETREAT,

    /**
     * Subtracts from this Pokemon's retreat cost, never below zero. Read by
     * {@code RetreatAction}.
     */
    REDUCE_RETREAT_COST
}
